# imagec

./: .gitignore  CMakeLists.txt  config.xml  configreader.cpp  configreader.h  image.cpp  image.h  imagewindow.cpp  imagewindow.h  imagewindow.ui  main.cpp  mainwindow.cpp  mainwindow.h
